# cuPDLP-C

./: .gitignore  .gitmodules  CMakeLists.txt  FindCLPConf.cmake  FindCUDAConf.cmake  FindHiGHSConf.cmake  LICENSE  README.md
apps/: CMakeLists.txt  onlinelp.cpp  onlinelp.h
cmake/: README.md
cmake/highs/: highs-config.cmake  highs-targets-release.cmake  highs-targets.cmake
cupdlp/: CMakeLists.txt  README.md  cupdlp.h  cupdlp_cs.c  cupdlp_cs.h  cupdlp_defs.h  cupdlp_linalg.c  cupdlp_linalg.h  cupdlp_mps.c  cupdlp_mps.h  cupdlp_proj.c  cupdlp_proj.h  cupdlp_restart.c  cupdlp_scaling.c  cupdlp_scaling_cuda.c  cupdlp_scaling_cuda.h  cupdlp_solver.c  cupdlp_solver.h  cupdlp_step.c  cupdlp_step.h  cupdlp_utils.c  cupdlp_utils.h  glbopts.h
cupdlp/cuda/: CMakeLists.txt  cupdlp_cuda_kernels.cu  cupdlp_cuda_kernels.cuh  cupdlp_cudalinalg.cu  cupdlp_cudalinalg.cuh  test_cublas.c  test_cuda_linalg.c
interface/: CMakeLists.txt  mps_abip.c  mps_clp.c  mps_highs.c  mps_lp.c  mps_lp.h  wrapper_clp.cpp  wrapper_clp.h  wrapper_highs.cpp  wrapper_highs.h
jlcupdlp/: CMakeLists.txt  jlcupdlp.c  jlcupdlp.h
jlcupdlp/base/: Manifest.toml  Project.toml
jlcupdlp/cuPDLPc/: Manifest.toml  Project.toml
jlcupdlp/cuPDLPc/src/: cuPDLPc.jl
jlcupdlp/cuPDLPc/src/utilities/: cuPDLP-julia-c.jl  cuPDLP_CONST.jl
jlcupdlp/cuPDLPc/test/: test.jl
pycupdlp/: CMakeLists.txt  README.md  cupdlp_bindings.cpp  example.py  readme.md  setup.py
